--- a/m1/w1/d4/index.html
+++ b/m1/w1/d4/index.html
@@ -6,8 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Primi passi operativi per creare un modello di pagina html per un post. Scopri come iniziare in modo facile." />
         <title>Sviluppo di una pagina web - Blog Epicode</title>
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="assets/css/font-awesome.css">
         <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/style.css">
@@ -17,7 +18,7 @@
         <header>
             <div>
                 <img src="assets/img/logo.svg" alt="logo">
-                <h1>Epicode - Il blog dei developers</h1>
+                <p>Epicode - Il blog dei developers<p>
             </div>
     
             <nav>
@@ -26,14 +27,13 @@
                     <li><a href="#articoliCorrelati">Articoli</a></li>
                     <li><a href="Job.html">Job</a></li>
                 </ul>
-
-                <h2>Come creare un template per i post</h2>
-                <p><b>di Mario Rossi - pubblicato il 25/10/2020</b></p>
             </nav>
         </header>
 
         <main>
             <article>
+                <h1>Come creare un template per i post</h1>
+                <p><i class="fas fa-pen-square"></i>di Mario Rossi - <i class="fas fa-clock"></i> pubblicato il 25-10-2020</p>
                 <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le parti comuni da applicare a tutte le pagine.</p>
                 <p>Le varie aree saranno quindi suddivise in:</p>
                 <ul>
