--- a/m1/w1/d4/index.html
+++ b/m1/w1/d4/index.html
@@ -33,13 +33,13 @@
         <main>
             <article>
                 <h1>Come creare un template per i post</h1>
-                <p><i class="fas fa-pen-square"></i>di Mario Rossi - <i class="fas fa-clock"></i> pubblicato il 25-10-2020</p>
+                <p id="gray"><i class="fas fa-pen-square"></i> di Mario Rossi - <i class="fas fa-clock"></i> pubblicato il 25-10-2020</p>
                 <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le parti comuni da applicare a tutte le pagine.</p>
                 <p>Le varie aree saranno quindi suddivise in:</p>
                 <ul>
-                    <li>Contenuti di intestazione del tag &lt;header&gt;</li>
-                    <li>Contenuti centrali variabili del tag &lt;main&gt;</li>
-                    <li>Contenuti di fine pagina comuni &lt;footer&gt;</li>
+                    <li>Contenuti di intestazione del tag <code>&lt;header&gt;</code></li>
+                    <li>Contenuti centrali variabili del tag <code>&lt;main&gt;</code></li>
+                    <li>Contenuti di fine pagina comuni, da inserire nel tag <code>&lt;footer&gt;</code></li>
                 </ul>
                 <h2>Formattazione del codice</h2>
                 <p>Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da selezionare con i CSS. Perciò i passi saranno:</p>
