--- a/m1/w1/d4/lavora.html
+++ b/m1/w1/d4/lavora.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Job</title>
+    <title>Lavora con noi</title>
 </head>
 
 <body>
     <header>
-        <h1>Job</h1>
+        <h1>Lavora con noi</h1>
     </header>
 </body>
 
