--- a/m1/w1/ps1/index.html
+++ b/m1/w1/ps1/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Corso Web Developer - Epicode school</title>
-        <meta name="description" content="Da zero a Epicode con i corsi completi per diventare uno sviluppatore professionista in 3 mesi.">
+        <meta name="description" content="Corsi completi per diventare uno sviluppatore professionista in 3 mesi.">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
@@ -60,20 +60,20 @@
             </section>
 
             <section>
-                <div>
-                    <img src="assets/images/foto1.jpg" class="image" alt="Postazione di lavoro">
+                <div class="box">
+                    <img src="assets/images/foto1.jpg" alt="Postazione di lavoro">
                     <h3>Il tuo pc</h3>
                     <p>Se vuoi diventare developer è l’unico strumento di cui hai bisogno.</p>
                 </div>
 
-                <div>
-                    <img src="assets/images/foto2.jpg" class="image" alt="Computer">
+                <div class="box">
+                    <img src="assets/images/foto2.jpg" alt="Computer">
                     <h3>Impara ora</h3>
                     <p>Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
                 </div>
 
-                <div>
-                    <img src="assets/images/foto3.jpg" class="image" alt="Team di lavoro">
+                <div class="box">
+                    <img src="assets/images/foto3.jpg" alt="Team di lavoro">
                     <h3>Lavora subito</h3>
                     <p>Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
                 </div>
@@ -90,7 +90,7 @@
                     <li><i class="fas fa-location-arrow"></i>Via Appia 1 - 00100 Roma (RM)</li>
                 </ul>
             </address>
-            <p id="footer">&copy;2021. Immagini di Pixabay.</p>
+            <p id="footer">&copy;2021. Immagini di <a href="https://pixabay.com" title="Sito immagini" target="_blank">Pixabay</a></p>
         </footer>
     </body>
 
