--- a/m1/w1/d4/index.html
+++ b/m1/w1/d4/index.html
@@ -18,8 +18,7 @@
         <header>
             <div>
                 <img src="assets/img/logo.svg" alt="logo">
-                <p>Epicode - Il blog dei developers
-                <p>
+                <p>Epicode - Il blog dei developers<p>
             </div>
     
             <nav>
