--- a/m1/w2/ps2/index.html
+++ b/m1/w2/ps2/index.html
@@ -14,26 +14,26 @@
     <div id="calculator">
         <div id="display"></div>
         <div id="commands">
-            <button type="button" class="buttons" id="AC" onclick="clearDisplay()">AC</button>
-            <button type="button" class="buttons" id="CE" onclick="deleteLastDigit();">CE</button>
-            <button type="button" class="buttons" id="percent" onclick="percent();">%</button>
-            <button type="button" class="buttons" id="divide" onclick="pressOperator('/')">÷</button>
-            <button type="button" class="buttons" id="seven" onclick="pressNumber(7);">7</button>
-            <button type="button" class="buttons" id="eight" onclick="pressNumber(8);">8</button>
-            <button type="button" class="buttons" id="nine" onclick="pressNumber(9);">9</button>
-            <button type="button" class="buttons" id="multiply" onclick="pressOperator('*')">x</button>
-            <button type="button" class="buttons" id="four" onclick="pressNumber(4);">4</button>
-            <button type="button" class="buttons" id="five" onclick="pressNumber(5);">5</button>
-            <button type="button" class="buttons" id="six" onclick="pressNumber(6);">6</button>
-            <button type="button" class="buttons" id="minus" onclick="pressOperator('-')">-</button>
-            <button type="button" class="buttons" id="one" onclick="pressNumber(1);">1</button>
-            <button type="button" class="buttons" id="two" onclick="pressNumber(2);">2</button>
-            <button type="button" class="buttons" id="three" onclick="pressNumber(3);">3</button>
-            <button type="button" class="buttons" id="plus" onclick="pressOperator('+');">+</button>
-            <button type="button" class="buttons" id="zero" onclick="pressNumber(0);">0</button>
-            <button type="button" class="buttons" id="doubleZero" onclick="pressNumber(00);">00</button>
-            <button type="button" class="buttons" id="dot" onclick="pressNumber('.');">.</button>
-            <button type="button" class="buttons" id="equals" onclick="equals();">=</button>
+            <button class="buttons" id="AC" onclick="clearDisplay()">AC</button>
+            <button class="buttons" id="CE" onclick="deleteLastDigit();">CE</button>
+            <button class="buttons" id="percent" onclick="percent();">%</button>
+            <button class="buttons" id="divide" onclick="pressOperator('/')">÷</button>
+            <button class="buttons" id="seven" onclick="pressNumber(7);">7</button>
+            <button class="buttons" id="eight" onclick="pressNumber(8);">8</button>
+            <button class="buttons" id="nine" onclick="pressNumber(9);">9</button>
+            <button class="buttons" id="multiply" onclick="pressOperator('*')">x</button>
+            <button class="buttons" id="four" onclick="pressNumber(4);">4</button>
+            <button class="buttons" id="five" onclick="pressNumber(5);">5</button>
+            <button class="buttons" id="six" onclick="pressNumber(6);">6</button>
+            <button class="buttons" id="minus" onclick="pressOperator('-')">-</button>
+            <button class="buttons" id="one" onclick="pressNumber(1);">1</button>
+            <button class="buttons" id="two" onclick="pressNumber(2);">2</button>
+            <button class="buttons" id="three" onclick="pressNumber(3);">3</button>
+            <button class="buttons" id="plus" onclick="pressOperator('+');">+</button>
+            <button class="buttons" id="zero" onclick="pressNumber(0);">0</button>
+            <button class="buttons" id="doubleZero" onclick="pressNumber(00);">00</button>
+            <button class="buttons" id="dot" onclick="pressNumber('.');">.</button>
+            <button class="buttons" id="equals" onclick="equals();">=</button>
         </div>
     </div>
 
