--- a/m1/w3/d4/index.html
+++ b/m1/w3/d4/index.html
@@ -57,95 +57,138 @@
       */
 
       const changeTitle = function (newTitle) {
-        //
+        document.querySelector('h1').textContent = newTitle
       }
+
+      changeTitle('Nuovo Titolo')
 
       /* ESERCIZIO 2
        Scrivi una funzione per cambiare la classe del titolo della pagina in "myHeading".
       */
 
       const addClassToTitle = function () {
-        //
+        let title = document.querySelector('h1')
+        title.classList.remove('myClass')
+        title.classList.add('myHeading')
       }
+
+      console.log(addClassToTitle)
 
       /* ESERCIZIO 3
        Scrivi una funzione per cambiare il contenuto di tutti i p che sono discendenti di un div.
       */
 
       const changePcontent = function () {
-        //
+        let newContent = document.querySelectorAll('div p')
+        for (let i = 0; i < newContent.length; i++){
+          newContent[i].textContent = 'Nuovo Contenuto'
+        }
       }
+
+      changePcontent()
 
       /* ESERCIZIO 4
        Scrivi una funzione per cambiare la proprietà href di ogni link a https://www.google.com
       */
 
       const changeUrls = function () {
-        //
+        let newLink = document.querySelector('a')
+        newLink.href = 'https://fonts.google.com/'
       }
+
+      changeUrls()
 
       /* ESERCIZIO 5
        Scrivi una funzione per aggiungere un nuovo elemento alla seconda lista non-ordinata.
       */
 
       const addToTheSecond = function (content) {
-        //
+        let secondList = document.querySelector('#secondList')
+        let text = document.createElement('li')
+        text.innerHTML = content
+        secondList.appendChild(text)
       }
+
+      addToTheSecond('Quarto')
 
       /* ESERCIZIO 6
        Scrivi una funzione per aggiungere un secondo paragrafo al primo div.
       */
 
       const addParagraph = function (content) {
-        //
+        const div = document.querySelectorAll('div')[0]
+        div.innerHTML += `<p>${content}</p>`
       }
+
+      addParagraph('Nuovo Paragrafo')
 
       /* ESERCIZIO 7
        Scrivi una funzione per far scomparire la prima lista non-ordinata.
       */
 
       const firstUlDisappear = function () {
-        //
+        let firstList = document.querySelector('#firstList')
+        firstList.remove()
       }
+
+      firstUlDisappear()
 
       /* ESERCIZIO 8
        Scrivi una funzione per rendere verde lo sfondo di ogni lista non-ordinata.
       */
 
       const paintItGreen = function () {
-        //
+        let green = document.querySelectorAll('ul')
+        for (let back of green){
+          back.style.backgroundColor = 'green'
+        }
       }
+
+      paintItGreen()
 
       /* ESERCIZIO 9
        Rendi il tag h1 capace di cambiare colore del testo ogni volta che l'utente ci clicca sopra.
       */
 
       const makeItClickable = function () {
-        //
+        let title = document.querySelector('h1')
+        title.addEventListener('click', function (){
+          title.style.color = 'red'
+        })
       }
+
+      makeItClickable()
 
       /* ESERCIZIO 10
        Cambia il testo del footer con qualcos'altro quando l'utente ci clicca sopra.
       */
 
-      const changeFooterText = function () {
-        //
+      const changeFooterText = function (text) {
+        let footer = document.querySelector('.footer > h2')
+        footer.addEventListener('click', function (){
+          footer.textContent = text
+        })
       }
+
+      changeFooterText('Bye bye!')
 
       /* ESERCIZIO 11
        Aggiungi un event listener al campo di testo nella pagina e fai in modo che dopo ogni lettera il suo valore venga mostrato in console.
       */
 
       const inputField = document.getElementById('input-field')
-      // ...
+      inputField.addEventListener('keydown', function(a){
+        console.log(a.key)
+      })
 
       /* ESERCIZIO 12
        Crea un messaggio di benvenuto con un alert quando la pagina ha finito di caricarsi.
       */
 
       window.onload = function () {
-        //
+        alert('Benvenuti in Javascript')
       }
+
     </script>
   </body>
 </html>
