--- a/m2/w1/d1/index.html
+++ b/m2/w1/d1/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Sviluppo di una pagina web - Blog Epicode</title>
-    <meta name="description"
-        content="Primi passi operativi per creare un modello di pagina HTML per un post. Scopri come iniziare in modo facile.">
+    <meta name="description" content="Primi passi operativi per creare un modello di pagina HTML per un post. Scopri come iniziare in modo facile.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -37,7 +36,7 @@
             <h1>Come creare un template per i post</h1>
             <p><i class="fas fa-pen-square"></i> di Mario Rossi - <span><i class="fas fa-clock"></i> pubblicato il 25-10-2020</span></p>
 
-            <img src="assets/img/html.png" alt="logo html">
+            <img src="assets/img/badge.png" alt="logo html">
 
             <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le <strong>parti comuni</strong> da applicare a tutte le pagine</p>
 
@@ -49,8 +48,7 @@
             </ul>
 
             <h2>Formattazione del codice</h2>
-            <p>Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da <strong>selezionare con
-                    i CSS</strong>. Perciò i passi saranno:</p>
+            <p>Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da <strong>selezionare con i CSS</strong>. Perciò i passi saranno:</p>
             <ol>
                 <li>Progettare su carta il markup finale, assegnando ad ogni specifico testo il tag appropriato</li>
                 <li>Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso il basso</li>
@@ -97,15 +95,9 @@
                 </tbody>
             </table>
 
-            <p>Un test di validazione potrà essere fatto tramite il <a href="https://jigsaw.w3.org/css-validator/"
-                    target="blank" title="Validatore CSS online del W3C">tool online</a> dedicato allo scopo. Una volta
-                ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri developers come
-                loro:</p>
+            <p>Un test di validazione potrà essere fatto tramite il <a href="https://jigsaw.w3.org/css-validator/" target="blank" title="Validatore CSS online del W3C">tool online</a> dedicato allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri developers come loro:</p>
 
-            <iframe width="300" height="300" src="https://www.youtube.com/embed/dvOvHXruEDM"
-                title="YouTube video player"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+            <iframe width="300" height="300" src="https://www.youtube.com/embed/dvOvHXruEDM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
             <section>
                 <h2>Novità</h2>
@@ -124,24 +116,19 @@
         <aside>
             <h2>Articoli correlati</h2>
             <div>
-                <a href="post2.html"
-                    title="Passaggi guidati per validare correttamente tutto il codice sviluppato">Validare il codice
-                    HTML</a>
+                <a href="post2.html" title="Passaggi guidati per validare correttamente tutto il codice sviluppato">Validare il codice HTML</a>
                 <p><i class="fas fa-tag"></i> Categoria: develop</p>
                 <p><i class="fas fa-calendar-alt"></i> Data: 18-9-2020</p>
             </div>
 
             <div>
-                <a href="post3.html"
-                    title="Passaggi guidati per controllare e correggere tutto il codice sviluppato">Correggere la
-                    sintassi</a>
+                <a href="post3.html" title="Passaggi guidati per controllare e correggere tutto il codice sviluppato">Correggere la sintassi</a>
                 <p><i class="fas fa-tag"></i> Categoria: develop</p>
                 <p><i class="fas fa-calendar-alt"></i> Data: 16-9-2020</p>
             </div>
 
             <div>
-                <a href="post4.html" title="Consigli ed approcci per ridurre il peso della pagina">Meno Kb nella
-                    pagina</a>
+                <a href="post4.html" title="Consigli ed approcci per ridurre il peso della pagina">Meno Kb nella pagina</a>
                 <p><i class="fas fa-tag"></i> Categoria: ottimizzazione</p>
                 <p><i class="fas fa-calendar-alt"></i> Data: 30-9-2020</p>
             </div>
@@ -152,9 +139,7 @@
 
     <footer>
         <p>Blog Epicode &copy;2021</p>
-        <address>Testata online di Mario Rossi, registrata con prot. n.213/2018 - via Luigi Einaudi 2 - Milano. P.IVA
-            00112233. <a href="mailto:info@epicode.school"
-                title="contattami per informazioni/lavoro/privacy">info@epicode.school</a></address>
+        <address>Testata online di Mario Rossi, registrata con prot. n.213/2018 - via Luigi Einaudi 2 - Milano. P.IVA 00112233. <a href="mailto:info@epicode.school" title="contattami per informazioni/lavoro/privacy">info@epicode.school</a></address>
     </footer>
 
 </body>
