--- a/m2/w1/d2/index.html
+++ b/m2/w1/d2/index.html
@@ -145,9 +145,9 @@
         <address>Testata online di Mario Rossi, registrata con prot. n.213/2018 - via Luigi Einaudi 2 - Milano. P.IVA 00112233. <a href="mailto:info@epicode.school" title="contattami per informazioni/lavoro/privacy">info@epicode.school</a></address>
     </footer>
 
-    <div id="social"><a href="https://www.facebook.com" target="_blank"><i class="far fa-plus-square"></i></a></div>
-    <div id="calendar"><a href="https://calendar.google.com"><i class="far fa-calendar-alt"></i></a></div>
-    <div id="top"><a href="#top"><i class="far fa-caret-square-up"></i></a></div>
+    <div class="social"><a href="https://www.facebook.com" target="_blank"><i class="far fa-plus-square"></i></a></div>
+    <div class="calendar"><a href="https://calendar.google.com"><i class="far fa-calendar-alt"></i></a></div>
+    <div class="top"><a href="#top"><i class="far fa-caret-square-up"></i></a></div>
 
 </body>
 
